--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "homepage": "https://github.com/BillySwaggyKidy/Enzo_and_Elise_JS#readme",
   "dependencies": {
     "core-js": "^3.25.0",
-    "handtrackjs": "^0.1.5"
+    "@tensorflow/tfjs": "3.3.0",
+    "@tensorflow/tfjs-converter": "3.3.0",
+    "copy-webpack-plugin": "^8.1.1"
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
@@ -35,6 +37,13 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.1"
+    "webpack-dev-server": "^4.10.1",
+    "@types/jasmine": "~2.8.8",
+    "babel-core": "~6.26.0",
+    "babel-plugin-transform-runtime": "~6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "cross-env": "^5.1.1",
+    "cssnano": "^4.1.8",
+    "gh-pages": "^1.1.0"
   }
 }
